Group table program for node and lag
Change-Id: I13e18cd0317061b1d57af0aa0e674c0418ddb2bb
Signed-off-by: kalaiselvik <Kalaiselvi_K@Dell.com>